--- a/worker/package.json
+++ b/worker/package.json
@@ -2,12 +2,12 @@
   "name": "worker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.mjs",
-  "type": "module",
+  "main": "index.js",
+  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon",
-    "start": "node index.mjs"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "dinkar joshi <=dinkarjoshi21@gmail.com>",
